# raytracing

./: .gitignore  Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: rust.yml
progress/: README.md
scripts/: render-all.sh
src/: camera.rs  hittable.rs  lib.rs  main.rs  material.rs  ray.rs  vec3.rs
src/hittable/: sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
src/vec3/: color.rs  point3.rs
