[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"
authors = [
    "Manuel Hutter (https://github.com/mhutter)"
]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
